Fix CORS securityConfig, add frontend improvements, hotfix live chat